# MeterLake

./: .gitignore  README.md  databricks.yml  pyproject.toml  setup_meterlake_structure.sh
.github/workflows/: ci.yml
resources/jobs/: bronze_ingestion.job.yml
src/meterlake.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/meterlake/config/: resources.py
src/meterlake/jobs/: bronze_ingestion.py
src/meterlake/schemas/: bronze.py  silver.py
tests/: test_bronze_validation.py  test_path_config.py
