[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meterlake"
version = "0.1.0"
description = "Usage-based billing and revenue analytics lakehouse"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
bronze_ingestion = "meterlake.jobs.bronze_ingestion_job:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
