[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meterlake"
version = "0.1.1"
description = "Usage-based billing and revenue analytics lakehouse"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "build>=1.2,<2",
    "pytest>=8,<9",
    "pyspark==4.0.0",
]

[project.scripts]
bronze_ingestion = "meterlake.jobs.bronze_ingestion:cli"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
